--- a/Index.css
+++ b/Index.css
@@ -1,7 +1,13 @@
-.customclass{
-    background-color: #67C5F2;
+.button{
+    width: 200px;
+    height: 200px;
+    background: red;
+    -webkit-transition-duration: 0.4s;
+    -moz-transition-duration: 0.4s;
+    -o-transition-duration: 0.4s;
+    transition-duration: 0.4s;
 }
 
-#customid{
-    background-color: #FFFDD0;
+.button:hover{
+    opacity:0;
 }
