--- a/david milestone 1/views/nav.html
+++ b/david milestone 1/views/nav.html
@@ -1,25 +1,22 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-<div class="container-fluid">
-    <a class="navbar-brand" href="index.html">Capstone</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+<nav class="navbar navbar-expand-dark navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="">David Ramirez</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="...">A link to another page</a></li>
-                <li><a class="dropdown-item" href="...">Another link to a page</a></li>
-            </ul>
-            </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www2.rcc.edu/services/counseling/Documents/Map%20of%20UC%27s%20and%20CSU%27s.pdf">Lists of UC/CSU'S</a>            
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="blank.html">Best fit for you</a>         
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Interactive.html">Log In/Sign In</a>
+          </li>
         </ul>
+      </div>
     </div>
-</div>
-</nav>
+  </nav>
 
