--- a/david milestone 1/views/nav.html
+++ b/david milestone 1/views/nav.html
@@ -1,19 +1,22 @@
 <nav class="navbar navbar-expand-dark navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="">David Ramirez</a>
+      <a class="navbar-brand" href="Home.html">David Ramirez</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="https://www2.rcc.edu/services/counseling/Documents/Map%20of%20UC%27s%20and%20CSU%27s.pdf">Lists of UC/CSU'S</a>            
+            <a class="nav-link" href="Uc.html">Lists of UC/CSU'S</a>            
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="blank.html">Best fit for you</a>         
+            <a class="nav-link" href="Interactive.html">Best fit for you</a>         
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Interactive.html">Log In/Sign In</a>
+            <a class="nav-link" href="Login.html">Log In/Sign In</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#"> </a>
           </li>
         </ul>
       </div>
